--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mi página de ejemplo</title>
+	<title>Mi página de ejemplo para el Curso</title>
 	<style>
 		body {
 			font-family: Arial, sans-serif;
